# 将该子项目下包含的内容反馈到主项目中去
include_directories(.)
# 01_basicGrammer
add_executable(01_basicGrammer-01_helloWorld 01_helloWorld.cpp)
add_executable(01_basicGrammer-02_varAndConst 02_varAndConst.cpp)
add_executable(01_basicGrammer-03_rawOfName 03_rawOfName.cpp)
add_executable(01_basicGrammer-04_dataType 04_dataType.cpp)
add_executable(01_basicGrammer-05_operationSymbol 05_operationSymbol.cpp)
add_executable(01_basicGrammer-06_processControl 06_processControl.cpp)
add_executable(01_basicGrammer-07_array 07_array.cpp)
add_executable(01_basicGrammer-08_function 08_function.cpp)
add_executable(01_basicGrammer-09_pointer 09_pointer.cpp)
